--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,20 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+node_modules_cache
+node_modules*.zip
+node_modules*.rar
+*node_modules*.zip
+*node_modules*.rar
+
 dist
 dist-ssr
-*.local
+dist*.zip
+dist*.rar
+*dist*.zip
+*dist*.rar
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
