--- a/package.json
+++ b/package.json
@@ -28,6 +28,14 @@
     "highlight.js": "^11.11.1",
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
+    "mars3d": "^3.9.3",
+    "mars3d-cesium": "^1.127.0",
+    "mars3d-echarts": "^3.9.3",
+    "mars3d-heatmap": "^3.9.3",
+    "mars3d-mapv": "^3.9.3",
+    "mars3d-space": "^3.9.3",
+    "mars3d-supermap": "^3.9.3",
+    "mars3d-wind": "^3.9.3",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "ol": "^10.4.0",
